solved some Alignment problem.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1592,7 +1592,7 @@ li {
     }
 
     img {
-      left: 19px;
+      left: 1.9rem;
       top: 11px;
     }
   }
